--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,4 +31,6 @@ dependencies {
     compile 'com.google.code.gson:gson:2.4'
 
     compile 'com.github.PhilJay:MPAndroidChart:v2.1.6'
+
+    compile 'com.sothree.slidinguppanel:library:3.3.1'
 }
