--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,5 +32,11 @@ dependencies {
 
     compile 'com.github.PhilJay:MPAndroidChart:v2.1.6'
 
-    compile 'com.sothree.slidinguppanel:library:3.3.1'
+    // Required -- JUnit 4 framework
+    testCompile 'junit:junit:4.12'
+    // Optional -- Mockito framework
+    testCompile 'org.mockito:mockito-core:1.10.19'
+
+    compile 'com.google.firebase:firebase-database:11.0.1'
 }
+
