--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,5 +38,7 @@ dependencies {
     testCompile 'org.mockito:mockito-core:1.10.19'
 
     compile 'com.google.firebase:firebase-database:11.0.1'
+
+    //compile 'com.google.android.gms:play-services:9.4.0'
 }
 
